Added translations to the home.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -248,12 +248,12 @@
       href="https://revistasmes.sceiba.cu"
       target="_blank"
       class="apps"
-      matTooltip="{{ 'REG_REV_CIENT_MES' | translate }}"
+      matTooltip="{{ 'REVISTAS_MES' | translate }}"
     >
       <img
         class="app-featured"
         src="/assets/icons/mes.svg"
-        [alt]="'REG_REV_CIENT_MES' | translate"
+        [alt]="'REVISTAS_MES' | translate"
         style="width: 55px; height: 55px"
       />
     </a>
