--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -148,63 +148,61 @@
     <img src="assets/icons/sceiba.middle.top.svg" alt="" style="margin-bottom: -4px; width: 100%;">
     <div class="w-100 bg-primary-color" fxLayout="column" fxLayoutAlign="center center">
         <div class="w-70 white-title" fxLayout="center">
-            <div class="p" markdown [src]="'/assets/markdown/home.sceiba.md'"></div>
-            
+            <div class="p" markdown [src]="'/assets/markdown/home.sceiba.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
         </div>
     </div>
     <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;">
 
     <div class="pt-50" ngClass.xs="pt-20 ph-30 pb-20">
-        <h1 class="mat-display-1 text-center" style="margin: 0;"> Próximamente </h1>
+        <h1 class="mat-display-1 text-center" style="margin: 0;">{{ 'PROXIMAMENTE' | translate }}</h1>
         <div class="cards-nexts" fxLayout="row wrap" fxLayoutAlign="center" fxLayoutGap="20px" fxLayout.xs="column">
             <div fxFlex=25%>
                 <mat-card class="bgtranparent">
                     <mat-card-header>
                         <div mat-card-avatar class="card1-header-image"></div>
-                        <mat-card-title>Personas</mat-card-title>
-                        <mat-card-subtitle>ORCID Cubano</mat-card-subtitle>
+                        <mat-card-title>{{ 'PERSONAS' | translate }}</mat-card-title>
+                        <mat-card-subtitle>{{ 'PERSONAS_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.persons.md'"></div>
+                        <div class="p" markdown [src]="'/assets/markdown/home.persons.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
                     </mat-card-content>
                     <mat-card-actions>
-
                     </mat-card-actions>
                 </mat-card>
             </div>
             <div fxFlex=25%>
                 <mat-card class="bgtranparent">
-                <mat-card-header>
-                    <div mat-card-avatar class="card2-header-image"></div>
-                    <mat-card-title>Evaluación</mat-card-title>
-                    <mat-card-subtitle>Metodologías propias</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="p" markdown [src]="'/assets/markdown/home.evaluations.md'"></div>
-                </mat-card-content>
-                <mat-card-actions>
-                </mat-card-actions>
+                    <mat-card-header>
+                        <div mat-card-avatar class="card2-header-image"></div>
+                        <mat-card-title>{{ 'EVALUACION' | translate }}</mat-card-title>
+                        <mat-card-subtitle>{{ 'EVALUACION_SUB' | translate }}</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div class="p" markdown [src]="'/assets/markdown/home.evaluations.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
                 </mat-card>
             </div>
             <div fxFlex=25%>
                 <mat-card class="bgtranparent">
-                <mat-card-header>
-                    <div mat-card-avatar class="card3-header-image"></div>
-                    <mat-card-title>Carpetas personales</mat-card-title>
-                    <mat-card-subtitle>Tus intereses y experiencias.</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="p" markdown [src]="'/assets/markdown/home.fields.md'"></div>
-                </mat-card-content>
-                <mat-card-actions>
-                </mat-card-actions>
+                    <mat-card-header>
+                        <div mat-card-avatar class="card3-header-image"></div>
+                        <mat-card-title>{{ 'CARPETAS_PERS' | translate }}</mat-card-title>
+                        <mat-card-subtitle>{{ 'CARPETAS_PERS_SUB' | translate }}</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div class="p" markdown [src]="'/assets/markdown/home.fields.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
                 </mat-card>
             </div>
         </div>
     </div>
 
     <div class="pt-50" ngClass.xs="pt-20 pb-20" fxLayout="column" fxLayoutAlign="center center">
-        <h1 class="mat-display-1 text-center" style="margin: 0;"> Participantes </h1>
+        <h1 class="mat-display-1 text-center" style="margin: 0;">{{ 'PARTICIPANTES' | translate }}</h1>
         <!-- <mat-divider [ngStyle.xs]="{ width: '100%'}" [ngStyle]="{ width: '90%'}"></mat-divider> -->
         <div class="pt-30 w-80" ngClass.xs="pt-20 w-100" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; align-items: center;">
             <img src="/assets/images/upr.png" width="93" height="108" style="margin:1em">
@@ -218,7 +216,7 @@
     </div>
 
     <mat-card class="mat-elevation-z1 w-70 m-1 mb-1 ligth-green-card">
-        <mat-card-title>Contacte con nosotros</mat-card-title>
+        <mat-card-title>{{ 'CONTACTE_CON_NOS' | translate }}</mat-card-title>
         <mat-card-content>
             <app-contact></app-contact>
         </mat-card-content>
