orgs by organizacione

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -179,11 +179,11 @@
     <mat-icon>settings</mat-icon>
     {{ 'ADMINISTRACION' | translate }}
   </a> -->
-  <a mat-menu-item (click)="logoff()"> 
+  <a mat-menu-item (click)="logoff()">
     <mat-icon>exit_to_app</mat-icon>
     {{ 'SALIR' | translate }}
   </a>
-  <a mat-menu-item (click)="me()"> 
+  <a mat-menu-item (click)="me()">
     <mat-icon>exit_to_app</mat-icon>
     {{ 'YO' | translate }}
   </a>
@@ -220,7 +220,7 @@
       />
     </a>
     <a
-      href="https://orgs.sceiba.cu"
+      href="https://organizaciopnes.sceiba.cu"
       target="_blank"
       class="apps"
       matTooltip="{{ 'ORGANIZACIONES' | translate }}"
