--- a/src/app/footer/app.component.html
+++ b/src/app/footer/app.component.html
@@ -12,10 +12,10 @@
         Algunas características pueden no funcionar correctamente."> <strong> BETA </strong> </span>
     </div>
     <a mat-button [routerLink]="['/']" style="white-space: normal; display: flex; align-items: center;">
-        <img src="/assets/icons/logo.sceiba.letras.svg" alt="Sceiba" style="height: 50px; margin-right: 6px;">        
+        <img src="/assets/icons/logo.sceiba.letras.svg" alt="Sceiba" style="height: 50px; margin-right: 6px;">
     </a>
   </div>
-    
+
     <div
         class="center-elements"
         appearance="legacy"
@@ -103,7 +103,7 @@
     <a href="https://catalogo.sceiba.cu" target="__blanck" class="apps" matTooltip="Catálogo">
       <img src="/assets/icons/catalog.svg" alt="Catálogo" style="width: 55px; height: 55px;">
     </a>
-    <a href="https://orgs.sceiba.cu" target="__blanck" class="apps" matTooltip="Organizaciones">
+    <a href="https://organizaciopnes.sceiba.cu" target="__blanck" class="apps" matTooltip="Organizaciones">
         <img src="/assets/icons/organizacion.svg" alt="Organizaciones" style="width: 55px; height: 55px;">
     </a>
     <a href="https://vocs.sceiba.cu" target="__blanck" class="apps" matTooltip="Vocabularios">
