--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -220,7 +220,7 @@
       />
     </a>
     <a
-      href="https://organizaciopnes.sceiba.cu"
+      href="https://organizaciones.sceiba.cu"
       target="_blank"
       class="apps"
       matTooltip="{{ 'ORGANIZACIONES' | translate }}"
