--- a/src/app/footer/app.component.html
+++ b/src/app/footer/app.component.html
@@ -106,7 +106,7 @@
     <a href="https://organizaciopnes.sceiba.cu" target="__blanck" class="apps" matTooltip="Organizaciones">
         <img src="/assets/icons/organizacion.svg" alt="Organizaciones" style="width: 55px; height: 55px;">
     </a>
-    <a href="https://vocs.sceiba.cu" target="__blanck" class="apps" matTooltip="Vocabularios">
+    <a href="https://vocabularios.sceiba.cu" target="__blanck" class="apps" matTooltip="Vocabularios">
         <img src="/assets/icons/vocabs.svg" alt="Vocabularios" style="width: 55px; height: 55px;">
     </a>
     <mat-divider class="w-90"></mat-divider>
