Changed simple quotes to double quotes.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -117,13 +117,13 @@
             <p class="mat-h5" style="width: 80%; text-align: center; color:white; margin: 0; padding-top: 40px;">
                 {{ 'SCEIBA_PRIVACIDAD_1' | translate }}
                 <br>
-                {{ 'SCEIBA_PRIVACIDAD_2' | translate }} <a class='a-grey' href='http://creativecommons.org/licenses/by/4.0/' target='_blank'> Creative Commons CC by 4.0 License</a>
+                {{ 'SCEIBA_PRIVACIDAD_2' | translate }} <a class="a-grey" href="http://creativecommons.org/licenses/by/4.0/" target="_blank"> Creative Commons CC by 4.0 License</a>
             </p>
         </mat-toolbar-row>
     </mat-toolbar>
     
     <div fxLayout="column wrap" fxLayoutAlign="center center" style="padding: 1em;">
-        <a href="https://sceiba.cu"style="color: rgb(0, 0, 0, 0.87); text-decoration: none;">
+        <a href="https://sceiba.cu" style="color: rgb(0, 0, 0, 0.87); text-decoration: none;">
             <img src="/assets/icons/sceiba_white.svg" alt="Sceiba" width="120" height="50">
         </a>
         <p class="mat-h5" style="width: 80%; text-align: center; color:white; margin: 0;">
