--- a/src/app/footer/app.component.html
+++ b/src/app/footer/app.component.html
@@ -62,20 +62,20 @@
 </mat-menu> -->
 
 <mat-menu #menuHelp="matMenu">
-  <!-- <a mat-menu-item [routerLink]="['/help']">
+  <!-- <a mat-menu-item [routerLink]="['/help/help']">
       <mat-icon>help_outline</mat-icon>
       Ayuda
   </a> -->
-  <a mat-menu-item [routerLink]="['/about']">
+  <a mat-menu-item [routerLink]="['/help/about']">
     <mat-icon>info</mat-icon>
     Acerca de
   </a>
-  <a mat-menu-item [routerLink]="['/policy']">
+  <a mat-menu-item [routerLink]="['/help/policy']">
       <mat-icon>security</mat-icon>
       Privacidad
   </a>
 
-  <a mat-menu-item [routerLink]="['/contact']">
+  <a mat-menu-item [routerLink]="['/help/contact']">
       <mat-icon>contacts</mat-icon>
       Contactos
   </a>
