--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,8 @@
 
-<h1>Sorry, page not found!</h1>
+<div style="margin: 2em; text-align: center;">
+    <h1>{{ 'PAGINA_NO_ENCONTRADA_DISCULPA' | translate }}</h1>
+    <a [routerLink]="['/']">
+        <h2>{{ 'PAGINA_NO_ENCONTRADA_REDIRECCION' | translate }}</h2>
+        <img src="/assets/icons/logo.sceiba.letras.svg" alt="Sceiba" style="height: 50px; margin-right: 6px;">
+    </a>
+</div>
