Change the page-not-found control
Changes the page-not-found control from PageNotFoundComponent
to PageNotFoundSceibaComponent.

It also improves some translation texts that are used
in several places; for instance, in the SceibaFooterComponent.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
       >
         <img
           src="/assets/icons/logo.sceiba.letras.svg"
-          alt="Sceiba"
+          [alt]="'SCEIBA' | translate"
           style="height: 50px; margin-right: 6px"
         />
       </a>
@@ -196,12 +196,12 @@
       href="https://sceiba.cu"
       target="_blank"
       class="apps"
-      matTooltip="Sceiba"
+      matTooltip="{{ 'SCEIBA' | translate }}"
     >
       <img
         class="app-featured"
         src="/assets/icons/sceiba.svg"
-        alt="Sceiba"
+        [alt]="'SCEIBA' | translate"
         style="width: 55px; height: 55px"
       />
     </a>
